--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     ],
     "require": {
         "yiisoft/yii2": "~2.0.13",
-        "creocoder/yii2-flysystem": "dev-master as 1.2.0",
+        "creocoder/yii2-flysystem": "dev-oddity-agency-patches-php-84 as 1.2.0",
         "dmstr/yii2-active-record-permissions": "^1.0.0"
     },
     "repositories" : [
